fixing migrations
